src/Palette.h

/* palette object */
struct Palette
{
	DEFINE_OBJECT;
	int entries;		/* number of colors */
	uint8_t data[0];	/* variable size Color array */
};